--- a/Disaster_Alerts_System/alerts/templates/registration/login.html
+++ b/Disaster_Alerts_System/alerts/templates/registration/login.html
@@ -49,11 +49,11 @@
         transition: border-color 0.3s;
     }
     .form-control:focus {
-        border-color: #3498DB;
+        border-color: #aeb6bf ;
         box-shadow: 0 0 8px rgba(52, 152, 219, 0.2);
     }
     .btn-primary {
-        background-color: #3498DB;
+        background-color: #aeb6bf ;
         border: none;
         padding: 10px 16px; /* Ajustement de la taille du bouton */
         border-radius: 8px;
@@ -65,7 +65,7 @@
         transition: background-color 0.3s;
     }
     .btn-primary:hover {
-        background-color: #2980B9;
+        background-color: #aeb6bf ;
     }
     .alert-info {
         margin-bottom: 20px;
